Get rid of docker push and add linting

--- a/nf_core/pipeline-template/{{cookiecutter.name_noslash}}/Makefile
+++ b/nf_core/pipeline-template/{{cookiecutter.name_noslash}}/Makefile
@@ -1,10 +1,9 @@
-test: 
-	nextflow run . -profile test,docker
+docker_pull:
+	docker pull {{ cookiecutter.name_docker }}:dev
+	@echo Fake the tag locally so that the pipeline runs properly
+	@echo Looks weird when this is :dev to :dev, but makes sense when testing code for a release (:dev to :1.0.1)
+	docker tag {{ cookiecutter.name_docker }}:dev {{ cookiecutter.name_docker }}:dev
 
-lint:
-	nf-core lint .
-
-docker: docker_build docker_push
 
 docker_build:
 	@docker build \
@@ -12,7 +11,17 @@ docker_build:
 		--build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"` \
 		-t {{ cookiecutter.name_docker }} .
 
-docker_push:
-	sudo docker login
-	sudo docker push {{ cookiecutter.name_docker }}:dev
-	docker images
+
+lint: nf_lint md_lint
+
+nf_lint:
+	@echo Linting the pipeline code
+	nf-core lint .
+
+md_lint:
+	@echo Linting the documentation
+	markdownlint ${TRAVIS_BUILD_DIR} -c ${TRAVIS_BUILD_DIR}/.github/markdownlint.yml
+
+
+test:
+	nextflow run . -profile test,docker
